[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
itertools = "0.12.0"
once_cell = "1.18.0"
rangemap = "1.4.0"
num = "0.4.1"
rayon = "1.8.0"
smol_str = "0.2.0"
tinyvec = "1.6.0"
